Body overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,15 @@
     scroll-behavior: smooth;
   }
   
+  html, body {
+    overflow-x: hidden;
+  }
+
   body {
     margin: 0;
     width:100%;
     padding: 0;
-    overflow-x: hidden;
+    position: relative;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #1f1f1f;
     color: #fff;
@@ -481,12 +485,13 @@
     .about-container {
     background-color: rgba(255, 255, 255, 0.08);
     margin-top: 100px;
-    border-radius: 5px;
   }
 
   .github-stats{
     display: none;
   }
+
+
 
   }
 
